Implement PR comments